--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <div class="page-header">
+        <h1>Telephone book</h1>
+    </div>
+
+    <app-adress-book></app-adress-book>
+</div>
