--- a/src/app/adress-book/add-adress/add-adress.component.html
+++ b/src/app/adress-book/add-adress/add-adress.component.html
@@ -1,9 +1,35 @@
-<form class="form-group">
-  <label class="form-label">Full name</label>
-  <input class="form-control" type="text">
-  <label class="form-label">E-mail adress</label>
-  <input class="form-control" type="text">
-  <!--Choose between fixed phone or mobile phone-->
-  <label class="form-label">Telephone</label>
-  <input class="form-control" type="text">
+<form class="form-horizontal">
+  <div class="form-group">
+    <label class="control-label col-md-3">Full name</label>
+    <div class="col-md-6">
+      <input class="form-control" type="text" name="fullNameInput" placeholder="Fill in your full name here" [(ngModel)]="contactFormModel.fullName" >
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-md-3">E-mail adress</label>
+    <div class="col-md-6">
+      <input class="form-control" type="text" name="emailInput" placeholder="Fill in your full name here" [(ngModel)]="contactFormModel.emailAdress">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-md-3">Telephone</label>
+    <div class="col-md-6">
+      <input class="form-control" type="text" name="telephoneInput" placeholder="Fill in your telephone numnber her" [(ngModel)]="contactFormModel.telephoneNumber">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-md-offset-3 col-md-9">
+      <button class="btn btn-default" (click)="addContactHandler()">Add Contact</button>
+      <button class="btn btn-default" (click)="cancelHandler()">Cancel</button>
+    </div>
+  </div>
 </form>
+<br>
+<br>
+<br>
+<br>
+--------ngModel------<br>
+full name: {{ contactFormModel.fullName }} <br>
+e-mail: {{ contactFormModel.emailAdress }} <br>
+telephone: {{ contactFormModel.telephoneNumber }} <br>
+
