van telefoonboek naar contactlijst

--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -1,14 +1,14 @@
 <div *ngIf="showAddForm === false">
   <table class="table table-striped">
     <tr>
-      <th>Name</th>
+      <th>First name</th>
+      <th>Last name</th>
       <th>E-mail adress</th>
-      <th>Phone number</th>
     </tr>
     <tr *ngFor="let contact of contacts">
-      <td>{{ contact.fullName }}</td>
+      <td>{{ contact.firstName }}</td>
+      <td>{{ contact.lastName }}</td>
       <td>{{ contact.emailAdress }}</td>
-      <td>{{ contact.telephoneNumber }}</td>
     </tr>
   </table>
 
