--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="page-header">
-        <h1>Telephone book</h1>
+        <h1>Contact list</h1>
     </div>
-
     <app-adress-book></app-adress-book>
 </div>
