--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -1,25 +1,26 @@
-<form class="form-horizontal">
+<form class="form-horizontal" novalidate #form="ngForm">
   <div class="form-group">
     <label class="control-label col-md-3">First name</label>
     <div class="col-md-6">
-      <input class="form-control" type="text" name="fullNameInput" placeholder="first name (required)" [(ngModel)]="contactFormModel.firstName" >
+      <input class="form-control" required minlength="3" maxlength="64" type="text" name="fullNameInput" placeholder="first name (required)" [(ngModel)]="contactFormModel.firstName" >
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-md-3">Last name</label>
     <div class="col-md-6">
-      <input class="form-control" type="text" name="emailInput" placeholder="Last name (required)" [(ngModel)]="contactFormModel.lastName">
+      <input class="form-control" required minlength="3" maxlength="64" type="text" name="emailInput" placeholder="Last name (required)" [(ngModel)]="contactFormModel.lastName">
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-md-3">E-mail adress</label>
     <div class="col-md-6">
-      <input class="form-control" type="text" name="telephoneInput" placeholder="E-mail adress (required)" [(ngModel)]="contactFormModel.emailAdress">
+      <input class="form-control" required minlength="3" maxlength="64" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" 
+      type="email" name="telephoneInput" placeholder="E-mail adress (required)" [(ngModel)]="contactFormModel.emailAdress">
     </div>
   </div>
   <div class="form-group">
     <div class="col-md-offset-3 col-md-9">
-      <button class="btn btn-default" (click)="addContactHandler()">Add Contact</button>
+      <button class="btn btn-default" (click)="addContactHandler()" [disabled]="form.invalid" >Add Contact</button>
       <button class="btn btn-default" (click)="cancelHandler()">Cancel</button>
     </div>
   </div>
@@ -32,4 +33,10 @@
 first name: {{ contactFormModel.firstName }} <br>
 last name: {{ contactFormModel.lastName }} <br>
 e-mail adress: {{ contactFormModel.emailAdress }} <br>
+<br>
+-----ngForm---------<br> 
+dirty: {{ form.dirty }} <br>
+touched: {{ form.touched }} <br>
+valid: {{ form.valid }} <br>
+
 
