--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -1,40 +1,54 @@
-<form class="form-horizontal" novalidate #form="ngForm">
-  <div class="form-group" [ngClass]="{'has-error': (firstNameVar.touched || firstNameVar.dirty) && firstNameVar.invalid}">
+<form class="form-horizontal" novalidate [formGroup]="contactFormModel">
+  <!--<form class="form-horizontal" novalidate #form="ngForm">-->
+  <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid}">
     <label class="control-label col-md-3">First name</label>
     <div class="col-md-6">
-      <input class="form-control" required minlength="3" maxlength="64" type="text" name="firstNameInput" #firstNameVar="ngModel"
-        placeholder="first name (required)" [(ngModel)]="contactFormModel.firstName">
-      <span class="help-block" *ngIf="(firstNameVar.touched || firstNameVar.dirty) && firstNameVar.invalid">
-        <span *ngIf="firstNameVar.errors.required">  Please enter your first name </span>
-      <span *ngIf="firstNameVar.errors.minlength">  The first name must be longer than 3 characters </span>
+
+      <!--Template reference variable deleted
+      ngModel deleted
+      name deleted
+      FormControlName added
+      Template reference variable replaced call to the formgroup in NGclass-->
+      <input class="form-control" 
+      required minlength="3" 
+      maxlength="64" 
+      type="text" 
+      placeholder="First name (required)" 
+      formControlName="firstName">
+      <!--name="firstNameInput" 
+      #contactFormModel.get('firstName')="ngModel"
+      [(ngModel)]="contactFormModel.firstName"-->
+      <span class="help-block" *ngIf="(contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid">
+        <span *ngIf="contactFormModel.get('firstName').errors.required">  Please enter your first name </span>
+      <span *ngIf="contactFormModel.get('firstName').errors.minlength">  The first name must be longer than 3 characters </span>
       </span>
     </div>
   </div>
-  <div class="form-group" [ngClass]="{'has-error': (lastNameVar.touched || lastNameVar.dirty) && lastNameVar.invalid}">
+  <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('lastName').touched || contactFormModel.get('lastName').dirty) && contactFormModel.get('lastName').invalid}">
     <label class="control-label col-md-3">Last name</label>
     <div class="col-md-6">
-      <input class="form-control" required minlength="3" maxlength="64" type="text" name="lastNameInput" #lastNameVar="ngModel"
-        placeholder="Last name (required)" [(ngModel)]="contactFormModel.lastName">
-      <span class="help-block" *ngIf="(lastNameVar.touched || lastNameVar.dirty) && lastNameVar.invalid">
-        <span *ngIf="lastNameVar.errors.required">Please enter your last name </span>
-      <span *ngIf="lastNameVar.errors.minlength">The last name must be longer than 3 characters </span>
+      <input class="form-control" required minlength="3" maxlength="64" type="text" placeholder="Last name (required)" formControlName="lastName">
+      <span class="help-block" *ngIf="(contactFormModel.get('lastName').touched || contactFormModel.get('lastName').dirty) && contactFormModel.get('lastName').invalid">
+        <span *ngIf="contactFormModel.get('lastName').errors.required">Please enter your last name </span>
+      <span *ngIf="contactFormModel.get('lastName').errors.minlength">The last name must be longer than 3 characters </span>
       </span>
     </div>
   </div>
-  <div class="form-group" [ngClass]="{'has-error': (emailVar.touched || emailVar.dirty) && emailVar.invalid}">
+  <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('email').touched || contactFormModel.get('email').dirty) && contactFormModel.get('email').invalid}">
     <label class="control-label col-md-3">E-mail adress</label>
     <div class="col-md-6">
       <input class="form-control" required minlength="3" maxlength="64" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
-        type="email" name="emailInput" #emailVar="ngModel" placeholder="E-mail adress (required)" [(ngModel)]="contactFormModel.emailAdress">
-      <span class="help-block" *ngIf="(emailVar.touched || emailVar.dirty) && emailVar.invalid">
-        <span *ngIf="emailVar.errors.required">Please enter your e-mail adress </span>
-      <span *ngIf="emailVar.errors.minlength">The e-mail must be valid</span>
+        type="email" placeholder="E-mail adress (required)" formControlName="email">
+      <span class="help-block" *ngIf="(contactFormModel.get('email').touched || contactFormModel.get('email').dirty) && contactFormModel.get('email').invalid">
+        <span *ngIf="contactFormModel.get('email').errors.required">Please enter your e-mail adress </span>
+      <span *ngIf="contactFormModel.get('email').errors.minlength">The e-mail must be valid</span>
       </span>
     </div>
   </div>
   <div class="form-group">
     <div class="col-md-offset-3 col-md-9">
-      <button class="btn btn-default" (click)="addContactHandler()" [disabled]="form.invalid">Add Contact</button>
+      <button class="btn btn-default" (click)="addContactHandler()" [disabled]="contactFormModel.invalid">Add Contact</button>
+      <!--<button class="btn btn-default" (click)="addContactHandler()" [disabled]="form.invalid">Add Contact</button>-->
       <button class="btn btn-default" (click)="cancelHandler()">Cancel</button>
     </div>
   </div>
@@ -42,9 +56,15 @@
 <br>
 <br>
 <br>
-<br> --------ngModel------
+<br> -----Formgroup---------
+<br> dirty: {{ contactFormModel.dirty }} <br> touched: {{ contactFormModel.touched }} <br> valid: {{ contactFormModel.valid
+}} <br>
+<br> ngForm values: {{contactFormModel.value | json}}
+
+
+<!--<br> --------ngModel------
 <br> first name: {{ contactFormModel.firstName }} <br> last name: {{ contactFormModel.lastName }} <br> e-mail adress: {{
 contactFormModel.emailAdress }} <br>
 <br> -----ngForm---------
 <br> dirty: {{ form.dirty }} <br> touched: {{ form.touched }} <br> valid: {{ form.valid }} <br>
-<br> ngForm values: {{form.value | json}}
+<br> ngForm values: {{form.value | json}}-->
