--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -2,12 +2,15 @@
   <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid}">
     <label class="control-label col-md-3">First name</label>
     <div class="col-md-6">
+      <!--delete html validators-->
       <input class="form-control" 
-      required minlength="3" 
-      maxlength="64" 
       type="text" 
       placeholder="First name (required)" 
-      formControlName="firstName">
+      formControlName="firstName"
+      maxlength="64">
+       <!--required 
+       minlength="3"--> 
+     
         <span class="help-block" *ngIf="(contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid">
         <span *ngIf="contactFormModel.get('firstName').errors.required">  Please enter your first name </span>
       <span *ngIf="contactFormModel.get('firstName').errors.minlength">  The first name must be longer than 3 characters </span>
@@ -17,7 +20,7 @@
   <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('lastName').touched || contactFormModel.get('lastName').dirty) && contactFormModel.get('lastName').invalid}">
     <label class="control-label col-md-3">Last name</label>
     <div class="col-md-6">
-      <input class="form-control" required minlength="3" maxlength="64" type="text" placeholder="Last name (required)" formControlName="lastName">
+      <input class="form-control" type="text" placeholder="Last name (required)" formControlName="lastName" maxlength="64">
       <span class="help-block" *ngIf="(contactFormModel.get('lastName').touched || contactFormModel.get('lastName').dirty) && contactFormModel.get('lastName').invalid">
         <span *ngIf="contactFormModel.get('lastName').errors.required">Please enter your last name </span>
       <span *ngIf="contactFormModel.get('lastName').errors.minlength">The last name must be longer than 3 characters </span>
@@ -27,7 +30,7 @@
   <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('email').touched || contactFormModel.get('email').dirty) && contactFormModel.get('email').invalid}">
     <label class="control-label col-md-3">E-mail adress</label>
     <div class="col-md-6">
-      <input class="form-control" required minlength="3" maxlength="64" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
+      <input class="form-control"  maxlength="64"
         type="email" placeholder="E-mail adress (required)" formControlName="email">
       <span class="help-block" *ngIf="(contactFormModel.get('email').touched || contactFormModel.get('email').dirty) && contactFormModel.get('email').invalid">
         <span *ngIf="contactFormModel.get('email').errors.required">Please enter your e-mail adress </span>
