--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -23,14 +23,14 @@
       </span>
     </div>
   </div>
-  <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('email').touched || contactFormModel.get('email').dirty) && contactFormModel.get('email').invalid}">
+  <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('emailAdress').touched || contactFormModel.get('emailAdress').dirty) && contactFormModel.get('emailAdress').invalid}">
     <label class="control-label col-md-3">E-mail adress</label>
     <div class="col-md-6">
       <input class="form-control"  maxlength="64"
-        type="email" placeholder="E-mail adress (required)" formControlName="email">
-      <span class="help-block" *ngIf="(contactFormModel.get('email').touched || contactFormModel.get('email').dirty) && contactFormModel.get('email').invalid">
-        <span *ngIf="contactFormModel.get('email').errors.required">Please enter your e-mail adress </span>
-      <span *ngIf="contactFormModel.get('email').errors.minlength">The e-mail must be valid</span>
+        type="email" placeholder="E-mail adress (required)" formControlName="emailAdress">
+      <span class="help-block" *ngIf="(contactFormModel.get('emailAdress').touched || contactFormModel.get('emailAdress').dirty) && contactFormModel.get('emailAdress').invalid">
+        <span *ngIf="contactFormModel.get('emailAdress').errors.required">Please enter your e-mail adress </span>
+      <span *ngIf="contactFormModel.get('emailAdress').errors.minlength">The e-mail must be valid</span>
       </span>
     </div>
   </div>
