--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -3,12 +3,12 @@
     <tr>
       <th>First name</th>
       <th>Last name</th>
-      <th>E-mail adress</th>
+      <th>E-mail address</th>
     </tr>
     <tr *ngFor="let contact of contacts">
       <td>{{ contact.firstName }}</td>
       <td>{{ contact.lastName }}</td>
-      <td>{{ contact.emailAdress }}</td>
+      <td>{{ contact.emailAddress }}</td>
     </tr>
   </table>
 
