--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -26,11 +26,14 @@
   <div class="form-group" [ngClass]="{'has-error': displayedEmailValidationMessage}">
     <label class="control-label col-md-3">E-mail adress</label>
     <div class="col-md-6">
-      <input class="form-control"  maxlength="64"
-        type="email" placeholder="E-mail adress (required)" formControlName="emailAddress">
+      <input class="form-control"  
+      maxlength="64"
+      type="email" 
+      placeholder="E-mail adress (required)" 
+      formControlName="emailAddress">
       <span class="help-block" *ngIf="displayedEmailValidationMessage">
         <span> {{ displayedEmailValidationMessage }}  </span>
-        </span>
+      </span>
     </div>
   </div>
   <div class="form-group">
