--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -1,35 +1,23 @@
 <form class="form-horizontal" novalidate #form="ngForm">
-  <div class="form-group" [ngClass]="{'has-error': (firstNameVar.touched || firstNameVar.dirty) && firstNameVar.invalid}">
+  <div class="form-group">
     <label class="control-label col-md-3">First name</label>
     <div class="col-md-6">
       <input class="form-control" required minlength="3" maxlength="64" type="text" name="firstNameInput" #firstNameVar="ngModel"
         placeholder="first name (required)" [(ngModel)]="contactFormModel.firstName">
-      <span class="help-block" *ngIf="(firstNameVar.touched || firstNameVar.dirty) && firstNameVar.invalid">
-        <span *ngIf="firstNameVar.errors.required">  Please enter your first name </span>
-      <span *ngIf="firstNameVar.errors.minlength">  The first name must be longer than 3 characters </span>
-      </span>
     </div>
   </div>
-  <div class="form-group" [ngClass]="{'has-error': (lastNameVar.touched || lastNameVar.dirty) && lastNameVar.invalid}">
+  <div class="form-group">
     <label class="control-label col-md-3">Last name</label>
     <div class="col-md-6">
       <input class="form-control" required minlength="3" maxlength="64" type="text" name="lastNameInput" #lastNameVar="ngModel"
         placeholder="Last name (required)" [(ngModel)]="contactFormModel.lastName">
-      <span class="help-block" *ngIf="(lastNameVar.touched || lastNameVar.dirty) && lastNameVar.invalid">
-        <span *ngIf="lastNameVar.errors.required">Please enter your last name </span>
-      <span *ngIf="lastNameVar.errors.minlength">The last name must be longer than 3 characters </span>
-      </span>
     </div>
   </div>
-  <div class="form-group" [ngClass]="{'has-error': (emailVar.touched || emailVar.dirty) && emailVar.invalid}">
+  <div class="form-group">
     <label class="control-label col-md-3">E-mail adress</label>
     <div class="col-md-6">
       <input class="form-control" required minlength="3" maxlength="64" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
         type="email" name="emailInput" #emailVar="ngModel" placeholder="E-mail adress (required)" [(ngModel)]="contactFormModel.emailAdress">
-      <span class="help-block" *ngIf="(emailVar.touched || emailVar.dirty) && emailVar.invalid">
-        <span *ngIf="emailVar.errors.required">Please enter your e-mail adress </span>
-      <span *ngIf="emailVar.errors.minlength">The e-mail must be valid</span>
-      </span>
     </div>
   </div>
   <div class="form-group">
