--- a/src/app/contact-list/add-contact/add-contact.component.html
+++ b/src/app/contact-list/add-contact/add-contact.component.html
@@ -2,12 +2,8 @@
   <div class="form-group" [ngClass]="{'has-error': (contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid}">
     <label class="control-label col-md-3">First name</label>
     <div class="col-md-6">
-     <input class="form-control" 
-      type="text" 
-      placeholder="First name (required)" 
-      formControlName="firstName"
-      maxlength="64">
-        <span class="help-block" *ngIf="(contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid">
+      <input class="form-control" type="text" placeholder="First name (required)" formControlName="firstName" maxlength="64">
+      <span class="help-block" *ngIf="(contactFormModel.get('firstName').touched || contactFormModel.get('firstName').dirty) && contactFormModel.get('firstName').invalid">
         <span *ngIf="contactFormModel.get('firstName').errors.required">  Please enter your first name </span>
       <span *ngIf="contactFormModel.get('firstName').errors.minlength">  The first name must be longer than 3 characters </span>
       </span>
@@ -23,17 +19,24 @@
       </span>
     </div>
   </div>
-  <div class="form-group" [ngClass]="{'has-error': displayedEmailValidationMessage}">
-    <label class="control-label col-md-3">E-mail adress</label>
-    <div class="col-md-6">
-      <input class="form-control"  
-      maxlength="64"
-      type="email" 
-      placeholder="E-mail adress (required)" 
-      formControlName="emailAddress">
-      <span class="help-block" *ngIf="displayedEmailValidationMessage">
+  <div formGroupName="emailGroup">
+    <div class="form-group" [ngClass]="{'has-error': displayedEmailValidationMessage}">
+      <label class="control-label col-md-3">E-mail adress</label>
+      <div class="col-md-6">
+        <input class="form-control" maxlength="64" type="email" placeholder="E-mail adress (required)" formControlName="email">
+        <span class="help-block" *ngIf="displayedEmailValidationMessage">
         <span> {{ displayedEmailValidationMessage }}  </span>
-      </span>
+        </span>
+      </div>
+    </div>
+    <div class="form-group" [ngClass]="{'has-error': displayedEmailValidationMessage}">
+      <label class="control-label col-md-3">Bevestig E-mail adress</label>
+      <div class="col-md-6">
+        <input class="form-control" maxlength="64" type="email" placeholder="E-mail adress (required)" formControlName="bevestigEmail">
+        <span class="help-block" *ngIf="displayedEmailValidationMessage">
+        <span> {{ displayedEmailValidationMessage }}  </span>
+        </span>
+      </div>
     </div>
   </div>
   <div class="form-group">
@@ -50,4 +53,3 @@
 <br> dirty: {{ contactFormModel.dirty }} <br> touched: {{ contactFormModel.touched }} <br> valid: {{ contactFormModel.valid
 }} <br>
 <br> Formgroup values: {{contactFormModel.value | json}}
-
